syntax = "proto3";

package payment;
option go_package = "./payment";

// 支付 RPC 服务 — 供 Order 查询支付状态
service PaymentRpc {
  // 根据订单号查询支付记录
  rpc GetPaymentByOrderId(GetPaymentByOrderIdReq) returns (GetPaymentByOrderIdResp);
}

message GetPaymentByOrderIdReq {
  string order_id = 1;
}

message GetPaymentByOrderIdResp {
  int64  id        = 1;
  string order_id  = 2;
  string trade_no  = 3;
  double amount    = 4;
  int32  channel   = 5;
  int32  status    = 6;
}
